feat: 12 fairy stockfish evalution gui

--- a/gui/index.html
+++ b/gui/index.html
@@ -66,6 +66,24 @@
             </div>
         </div>
 
+        <!-- Evaluation Display -->
+        <div class="eval-container">
+            <div class="eval-bar-wrapper">
+                <div id="eval-bar" class="eval-bar">
+                    <div id="eval-bar-white" class="eval-bar-white" style="height: 50%;"></div>
+                </div>
+                <div class="eval-labels">
+                    <span>+</span>
+                    <span>−</span>
+                </div>
+            </div>
+            <div class="eval-info">
+                <div id="eval-score" class="eval-score">0.00</div>
+                <div id="eval-detail" class="eval-detail">depth: -</div>
+                <div id="best-move" class="best-move"></div>
+            </div>
+        </div>
+
         <!-- Turn Indicator -->
         <div id="turn-indicator" class="turn-indicator">
             <span class="turn-label">To move:</span>
