feat: add backend for fairy stockfish analysis

--- a/gui/index.html
+++ b/gui/index.html
@@ -81,6 +81,7 @@
                 <div id="eval-score" class="eval-score">0.00</div>
                 <div id="eval-detail" class="eval-detail">depth: -</div>
                 <div id="best-move" class="best-move"></div>
+                <button id="btn-analyze" class="btn btn-analyze">🔍 Analyze</button>
             </div>
         </div>
 
